# air

./: .env  .gitignore  Cargo.toml  Cargo.toml.repro  Instructions.md  LICENSE  PRODUCTION.md  README.md  build.ps1  config.toml  demo.ps1  deploy.ps1  e.ps1  examples.ps1  reproduce_issue.rs  run.ps1
.github/instructions/: unitTest.instructions.md
.github/workflows/: release.yml
examples/: simple_gguf.rs  test_gguf_model.rs
src/: agent.rs  config.rs  lib.rs  main.rs  models.rs
src/agent/: core.rs  fallback.rs  memory.rs  mod.rs  query.rs
src/providers/: cloud.rs  gguf_model.rs  local.rs  mod.rs
src/rag/: embeddings.rs  langchain_embedding.rs  mod.rs  store.rs
src/tools/: calculator.rs  command.rs  filesystem.rs  knowledge.rs  manager.rs  memory.rs  mod.rs  news.rs  planner.rs  screenshot.rs  system.rs  voice.rs  web.rs
src/utils/: doc.rs  mod.rs  model_inspector.rs  paths.rs
tests/: calculator_unit_test.rs  filesystem_unit_test.rs  gemini_integration_test.rs  gguf_model_comprehensive_test.rs  gguf_model_test.rs  gguf_model_unit_test.rs  integration_test.rs  new_tools_test.rs  openrouter_integration_test.rs  pure_local_mode_test.rs  simple_gguf_test.rs  tool_manager_test.rs  user_issue_fix_test.rs
