[package]
name = "ruai"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ruai"
path = "src/main.rs"

[lib]
name = "ruai"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
toml = "0.8"
num_cpus = "1.0"
regex = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
# GGUF model inference - using candle for pure Rust implementation
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.3"
tokenizers = "0.20"
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[features]
default = []
